fix: improve modal on mobile

--- a/src/modules/MealCardsModal/MealCardsModal.module.scss
+++ b/src/modules/MealCardsModal/MealCardsModal.module.scss
@@ -12,7 +12,6 @@
   left: 50%;
   padding: 0 !important;
   transform: translate(-50%, -50%);
-  height: 100% !important;
   width: 100% !important;
   max-width: 948px !important;
 
